fix: 资源池详情相关接口改造
